--- a/style.css
+++ b/style.css
@@ -12,8 +12,28 @@ body{
    align-items: center;
    flex-direction: column;
    background: rgb(255, 241, 237);
+   user-select:none;
 }
 li{list-style: none;}
+.cursor{
+   position: absolute;
+   font-size: 50px;
+   color:#c46811;
+   z-index: 999;
+   cursor: none;
+   pointer-events: none;
+   display: none;
+}
+.effect{
+   color:crimson;
+   position: absolute;
+   font-size:35px;
+   z-index: 999;
+   transition: all .3s;
+   cursor: none;
+   pointer-events: none;
+   opacity: 0;
+}
 .container{
    width: 1024px;
    text-align: center;
@@ -71,7 +91,7 @@ li{list-style: none;}
    position: absolute;
    height: 100%;
    background: rgb(255, 68, 93);
-   width: 20px;
+   width: 0px;
    top:0;
    left:0;
    box-shadow: inset 0 0 10px 1px rgba(110, 0, 28, 0.349);
@@ -82,28 +102,12 @@ li{list-style: none;}
    border: 1px solid black;
    background: white;
    border-radius: 50% 50% 30% 30%;
-   cursor: pointer;
+   cursor: none;
    transition: all .3s;
    position: relative;
 }
-.charater::after{
-   content:"\f004";
-   font-family:"Font Awesome 5 Free";
-   font-weight: 600;
-   color:crimson;
-   position: absolute;
-   right: 25px;
-   top:50px;
-   font-size: 55px;
-   opacity: 0;
-   transition: all .2s;
-}
 .charater:hover{transform: scale(1.05);}
 .charater:active{transform: scale(0.95);}
-.charater:active::after{
-   opacity: 1;
-   top:-30px;
-}
 /* 업그레이드 영역 */
 .box2{
    padding:100px 50px;
@@ -139,8 +143,8 @@ li{list-style: none;}
 
 /* 자동화 업그레이드 */
 .shop1{
-   display: flex;
-   /* display: none; */
+   /* display: flex; */
+   display: none;
    width: 100%;
    flex-direction: column;
    justify-content: center;
@@ -208,7 +212,42 @@ li{list-style: none;}
 }
 
 /* 클릭 업그레이드 */
-
+.shop2{
+   width: 90%;
+   height: 90%;
+   background: white;
+   border-radius: 20px;
+   display: flex;
+   flex-direction: column;
+   padding:30px 0;
+   justify-content:center;
+   align-items: center;
+}
+.shop2 i{font-size:100px;color:#c46811;}
+.shop2>div{display: flex;flex-direction: column;justify-content: center;align-items: center;}
+.buyBtn{
+   padding:10px 30px;
+   font-size: 25px;
+   border: none;
+   background: rgb(235, 109, 26);
+   font-weight: bold;
+   border-radius: 10px;
+   color: white;
+   cursor: pointer;
+   box-shadow: 0 8px 0 0 #752107;
+   margin-top:3cqb;
+   margin-bottom: 20px;
+}
+.buyBtn:hover{
+   background:rgb(233, 102, 15);
+}
+.buyBtn:active{
+   position: relative;
+   top:10px;
+   background:rgb(224, 102, 20);
+   box-shadow: 0 2px 0 0 #752107;
+}
+.shop2 span{color:rgb(192, 77, 24);}
 
 
 @media screen and (max-width:1024px) {
