--- a/style.css
+++ b/style.css
@@ -143,8 +143,7 @@ li{list-style: none;}
 
 /* 자동화 업그레이드 */
 .shop1{
-   /* display: flex; */
-   display: none;
+   display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: center;
@@ -181,8 +180,9 @@ li{list-style: none;}
 .items:active{box-shadow:inset 0 0 1px 2px rgb(240, 88, 0);}
 
 .items .title{display: flex;align-items: center;}
-.items .image{margin-right: 20px;width: 50px; height: 50px;}
-.items .image>img{width: 100%; height: 100%;}
+.items .image{margin-left: 10px; margin-right: 20px;width: 50px; height: 50px;}
+.items .image>img{width: 100%;height: 100%;}
+.items .image>p{font-size: 35px;}
 .items .name{
    font-size: 25px;
    margin-right: 30px;
@@ -213,11 +213,11 @@ li{list-style: none;}
 
 /* 클릭 업그레이드 */
 .shop2{
+   display: none;
    width: 90%;
    height: 90%;
    background: white;
    border-radius: 20px;
-   display: flex;
    flex-direction: column;
    padding:30px 0;
    justify-content:center;
