--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ li{list-style: none;}
    background: white;
    border-radius: 50% 50% 30% 30%;
 }
-.charater img{width: 100%;height: 100%;}
+.charater img{width: 100%;}
 .charater:hover{transform: scale(1.05);}
 .charater:active{transform: scale(0.95);}
 /* 업그레이드 영역 */
