--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 body{
    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
    color:#222;
-   width: 100vw;
-   height: 100vh;
    display: flex; 
    justify-content: center; 
    align-items: center;
@@ -122,6 +120,7 @@ li{list-style: none;}
 /* 게임 화면 */
 .container{
    width: 1024px;
+   margin:50px 0;
    text-align: center;
    background: white;
    box-shadow: 0 0 10px 0 rgba(150, 69, 32, 0.171);
@@ -213,9 +212,9 @@ li{list-style: none;}
    height: 100%;
    border: 1px solid black;
    background: white;
-   border-radius: 50% 50% 30% 30%;
+   border-radius: 50% 50% 50% 50% / 67% 67% 33% 33% ;
 }
-.charater img{width: 100%;}
+.charater img{width: 100%;-webkit-user-drag: none;}
 .charater:hover{transform: scale(1.05);}
 .charater:active{transform: scale(0.95);}
 /* 업그레이드 영역 */
@@ -359,9 +358,74 @@ li{list-style: none;}
 /* 미니게임 */
 .miniGame{
    width: 90%;
-   border: 1px solid;
-   margin:0 auto;
+   margin:20px auto;
+   display: flex;
+   justify-content: space-around;
+   border-radius: 20px;
+   /* display: none; */
+}
+.miniGame button{
+   width:150px;
+   height: 150px;
+   border-radius: 50%;
+   border: none;
+   cursor: pointer;
+   transition: all .3s;
+   background: #ffc187;
+   overflow: hidden;
+}
+.miniGame button:hover{transform: scale(1.1);}
+.miniGame button:active{transform: scale(0.9);}
+.flappyBird{
    display: none;
+   z-index: 999;
+   width: 100%;
+   height: 100%;
+   position: fixed;
+   background: #22222248;
+   top:0;
+   left:0;
+}
+.startBtn, .exitBtn, .flappyBird>p{
+   display: none;
+   padding:10px 40px;
+   font-size: 30px;
+   font-weight: bold;
+   display: block;
+   border: none;
+   border-radius: 10px;
+   position: fixed;
+   color:white;
+   left:50%;
+   cursor: pointer;
+}
+/* .startBtn{
+   background: rgb(72, 211, 59);
+   top:45%;
+   transform: translate(-50%, -45%);
+}
+.startBtn:hover{background: rgb(52, 175, 41);}
+.startBtn:active{background: rgb(72, 211, 59);} */
+.flappyBird>p{
+   top:40%;
+   transform: translate(-50%, -40%);
+}
+.exitBtn{
+   top:50%;
+   transform: translate(-50%, -50%);
+   background: rgb(230, 83, 57);
+}
+.exitBtn:hover{background: rgb(194, 60, 37);}
+.exitBtn:active{background: rgb(230, 83, 57);}
+canvas{
+   position: fixed;
+   background: skyblue;
+   top:50%;
+   left:50%;
+   transform: translate(-50%, -50%);
+}
+#flappyGame{
+   background: url('./img/flappybirdbg.png');
 }
 
 @media screen and (max-width:1024px) {
@@ -384,5 +448,6 @@ li{list-style: none;}
    .items .name{font-size: 25px;}
    .alert{width: 90%;}
    .alertMsg{padding:20px;}
-   .miniGame{margin-top:50px;}
+   .miniGame{margin-top:50px;flex-direction: column;justify-content: center;align-items: center;}
+   .miniGame button{margin-bottom: 30px;}
 }
