--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li{list-style: none;}
    cursor: none;
    pointer-events: none;
    display: none;
-   -webkit-text-stroke:4px #c46811;
+   -webkit-text-stroke:4px #8b0522;
 }
 
 /* 하트이펙트 */
@@ -137,12 +137,12 @@ li{list-style: none;}
    width: 100%;
    display: flex;
    justify-content: center;
-   align-items: center;
+   align-items: end;
 }
 
 /* 캐릭터 영역 */
 .box1{
-   width: 40%;;
+   width: 40%;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -199,7 +199,7 @@ li{list-style: none;}
 }
 .charater{
    width: 250px;
-   height: 350px;
+   height: 250px;
    cursor: none;
    transition: all .3s;
    position: relative;
@@ -208,11 +208,11 @@ li{list-style: none;}
    align-items: end;
 }
 .charater .egg{
-   width: 100%;
+   width: 80%;
    height: 100%;
    border: 1px solid black;
    background: white;
-   border-radius: 50% 50% 50% 50% / 67% 67% 33% 33% ;
+   border-radius: 50% 50% 50% 50% / 63% 63% 33% 33% ;
 }
 .charater img{width: 100%;-webkit-user-drag: none;}
 .charater:hover{transform: scale(1.05);}
@@ -221,7 +221,6 @@ li{list-style: none;}
 .box2{
    padding:100px 50px;
    padding-left: 0;
-   align-self: flex-end;
    width: 60%;
 }
 .box2>button{
@@ -436,10 +435,6 @@ canvas{
    .gameTitle{font-size: 30px;}
    .game{flex-direction: column;}
    .box1{width: 100%;margin-right: 0;padding:20px 0;}
-   .charater{
-      width: 150px;
-      height: 200px;
-   }
    .progressbar{
       height: 30px;
       margin-bottom: 20px;
